Fixes to screenshot labelling and prevent stacking of columns on mobile

--- a/app/elements/wednesday-breakpoint/wednesday-breakpoint.scss
+++ b/app/elements/wednesday-breakpoint/wednesday-breakpoint.scss
@@ -80,16 +80,3 @@ paper-input {
   }
 
 }
-
-dl {
-  margin-top: 2rem;
-
-  dt {
-    margin-top: 1rem;
-  }
-
-  dd {
-    margin-left: 0;
-  }
-
-}
