--- a/app/styles/screenshot.scss
+++ b/app/styles/screenshot.scss
@@ -7,6 +7,7 @@
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/grid";
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
+@import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
 
 html,
 body,
@@ -48,10 +49,19 @@ body {
 
   }
 
-  #title {
-    bottom: 0;
-    left: 15px;
-    position: absolute;
+}
+
+dl {
+  bottom: 0;
+  left: 15px;
+  position: absolute;
+
+  dt {
+    margin-top: 1rem;
+  }
+
+  dd {
+    margin-left: 0;
   }
 
 }
